--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 
 \author{Emil Njor}
-\title{Comparing Local and Cloud ML Processing on Embedded Systems for Energy Consumption}
+\title{Comparing Energy Consumption of Local and Cloud ML Processing on Embedded Systems}
 \date{\today}
 
 \begin{document}
